@@ -74,7 +74,8 @@
 #undef OPT_DISABLE_Z80
 #undef OPT_DISABLE_AVR
 #undef OPT_DISABLE_TININative
-#undef OPT_DISABLE_PIC
+#undef OPT_DISABLE_PIC14
+#undef OPT_DISABLE_PIC16
 #undef OPT_DISABLE_XA51
 
 #endif  /* SDCC_VC_HEADER */
