@@ -119,7 +119,7 @@
 #undef OPT_DISABLE_PACKIHX
 
 /* XXX */
-#undef OPT_DISABLE_PIC
+#undef OPT_DISABLE_PIC14
 
 /* XXX */
 #undef OPT_DISABLE_PIC16
